# UIPATH

./: .dockerignore  .env  .env.example  .gitignore  Build_Instalador.py  Conexion_DB.py  Config.py  Instalacion_de_importaciones.py  Prueba_Variables_entorno.py  Registrar_usuario_test.py  Render.yaml  cache_resultados_ia.json  cloudbuild.yaml  dockerfile  ejecutar.bat  estructura.txt  hash.py  instalador.iss  instalar_libs.py  main.py  main_Recoleccion.py  main_api.py  main_back.py  main_generacion.py  pyproject.toml  render.yaml  requirements.txt  run.py  run.spec  setup_env.ps1  start.sh  test.py
.github/workflows/: Generador-V2.yml  generador.yml  scraper.yml
UI/: Cambios_18_02_2026.txt  config.py  main.py  test_loading.py
UI/components/: animated_background.py  animated_input.py  base_window.py  btns_windows.py  classic_msgbox.py  neon_button.py  table_scroll_style.py  table_validations.py
UI/views/: loading.py  login.py  user_management.py  workspace_manager.py  workspace_user.py  workspace_userRE.py
data/: Clave_bucket_AIgemini.json  Documentos de contratación_nic-1460000530001-2026-00004_ExeGENBajarArchivoGeneral.cpe  moonlit-oven-483902-e4-c3e17a7fda32.json
logs/: log_20260121_002835.txt  log_202602mi_002633.txt  resumen_20260306_172209.json
src/Config/: version.py  version_route.py
src/Credentials/: Acceso_bucket_nexus.json  Clave_bucket_AIgemini.json
src/Database/: Prueba-asignacion-infimas-2.py  Prueba-cargar-infima-asignada.py  database.py  ejemplo_flujo_ia_registro_infima.py
src/Database/Auth/: Hashing.py  Usuario_auth.py
src/Database/Controllers/: bucket_url_controller.py  contraindicaciones_controller.py  evaluacion_controller.py  infima_controller.py  logs_eventos_controller.py  palabra_clave_controller.py  recomendaciones_usuario_controller.py  usuarios_controller.py
src/Database/Global/: Global.env
src/Database/Models/: bucket_url_model.py  contraindicaciones_model.py  evaluacion_model.py  infima_model.py  logs_eventos_model.py  palabra_clave_model.py  recomendaciones_usuario_model.py  usuarios_model.py
src/Database/Routes/: auth_routes.py  bucket_url_routes.py  contraindicaciones_routes.py  evaluacion_router.py  infima_routes.py  logs_eventos_routes.py  palabra_clave_routes.py  recomendaciones_usuario_routes.py  usuarios_routes.py
src/tasks/: 1_Recolector.py  1_Recolector1.py  2_Keywords.py  2_Recolector2.py  3_Download_PDFs.py  4_Contraindications.py  5_PACFinder.py  5_Preforms_generator-V2.py  5_Preforms_generator-V3-1.py  5_Preforms_generator-V3.py  5_Preforms_generator-V4.py  5_Preforms_generator.py  Dercargar_PDFs_new.py  FORMATO DE PROFORMA RECREADO VACÍO.xlsm  FORMATO_DE_PROFORMA_RECREADO_VACÍO.xlsm  FORMATO_DE_PROFORMA_RECREADO_VACÍO.xlsx  convert.py  requerimentos_generador_proformas.txt  ~$FORMATO DE PROFORMA RECREADO VACÍO.xlsm
src/utils/: Descargar_documentos_bucket.py  updater.py
