[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "app"                                   # Considera renombrar a algo más descriptivo como "compras-publicas-hn"
version = "0.1.0"
description = "Automatización de procesos de contratación pública (scraping, análisis y alertas)"
requires-python = ">=3.13"                     # ← Cambiado aquí para reflejar tu versión
license = {text = "MIT"}
authors = [
    {name = "Marissa Medina", email = "marissagmedina04@email.com"}
]
keywords = ["automatizacion", "scraping", "compras-publicas", "rpa", "openai", "mysql"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.0",           # numpy 2.x es estable y recomendado en 3.13+
    "requests>=2.32.3",
    "mysql-connector-python>=9.1",
    "openai>=1.51",
    "beautifulsoup4>=4.12.3",
    "flask>=3.0.3",
    # Parsers HTML necesarios para pd.read_html
    "lxml>=4.9.3",
    "html5lib>=1.1",
    # Recomendadas para robustez en scraping y config
    "python-dotenv>=1.0.1",
    "httpx>=0.27",
    "tenacity>=9.0",
    "selenium>=4.21.0",
    "webdriver-manager>=4.0.0",
    "pydrive2>=1.19.0",
    
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "pre-commit>=4.0",
    "mypy>=1.11",
    "types-requests",
    "types-beautifulsoup4",
]

[project.scripts]
compras-publicas = "app.__main__:main"         # Comando ejecutable (cámbialo si prefieres otro nombre)
# O: auto-contrataciones = "app.__main__:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov --cov-report=term-missing --cov-report=html:coverage"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"                      
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true
